--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "lerna": "^3.22.1",
     "typescript": "^4.0.5"
   }
