--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook"
+  },
   "dependencies": {
     "antd-mobile": "^2.3.4",
     "classnames": "^2.2.6",
@@ -8,6 +11,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@storybook/react": "^6.0.28",
     "@types/classnames": "^2.2.11",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.56",
