--- a/packages/com/package.json
+++ b/packages/com/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "com",
+  "name": "@montailee/com",
   "version": "1.0.0",
-  "description": "react com",
+  "description": "react base com",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react"
+    "react",
+    "ui"
   ],
-  "author": "lidy",
-  "license": "ISC",
+  "author": "montai",
   "dependencies": {
    
   }
