--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "scripts": {
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "rollup_dev": "node_modules/.bin/rollup -w -c ./build/rollup.config.dev.js",
+    "rollup_build": "node_modules/.bin/rollup -c ./build/rollup.config.prod.js",
+    "serve": "cross-env NODE_ENV='development' rollup -w -c ./build/rollup.config.dev.js",
+    "build": "cross-env NODE_ENV='production' rollup -c ./build/rollup.config.prod.js"
   },
   "dependencies": {
     "antd-mobile": "^2.3.4",
@@ -12,12 +16,34 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/addons": "^6.0.28",
     "@storybook/react": "^6.0.28",
     "@types/classnames": "^2.2.11",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "autoprefixer": "^10.0.2",
+    "cross-env": "^7.0.2",
+    "husky": "^4.3.0",
     "lerna": "^3.22.1",
+    "prettier": "^2.1.2",
+    "rollup": "^2.33.2",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.0.5"
   }
 }
