--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "outDir": "dist",
       "target": "es5",
       "lib": [
         "dom",
@@ -20,6 +21,13 @@
       "jsx": "react"
     },
     "include": [
-      "src"
+      "", 
+      "packages/**/src/*", 
+    ],
+    "exclude": [
+      "node_modules",
+      "build",
+      "packages/**/src/**/*.stories.tsx",
+      "packages/**/src/**/*.test.tsx",
     ]
   }
