--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
     "cross-env": "^7.0.2",
     "husky": "^4.3.0",
     "lerna": "^3.22.1",
+    "less": "^3.12.2",
     "prettier": "^2.1.2",
     "rollup": "^2.33.2",
+    "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   }
 }
