--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cross-env": "^7.0.2",
     "husky": "^4.3.0",
     "lerna": "^3.22.1",
-    "less": "^3.12.2",
+    "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "rollup": "^2.33.2",
     "rollup-plugin-clear": "^2.0.7",
