--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bus",
+  "name": "@montailee/bus",
   "version": "1.0.0",
   "description": "bus com",
   "main": "index.js",
@@ -7,11 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react"
+    "busui"
   ],
-  "author": "lidy",
-  "license": "ISC",
+  "author": "montai",
   "dependencies": {
-   
+  
   }
 }
