--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,20 @@
 {
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "packages": [
     "packages/*"
   ],
   "command": {
+    "publish": {
+      "ignoreChanges": ["*.md", "**/test/**"],
+      "message": "chore(release): publish",
+      "allowBranch": "master",
+      "conventionalCommits": true,
+      "exact": true
+    },
     "bootstrap": {
       "hoist": true
     }
   },
-  "version": "0.0.0"
+  "version": "1.0.0"
 }
