--- a/packages/com/package.json
+++ b/packages/com/package.json
@@ -7,11 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react",
-    "ui"
+    "comui"
   ],
   "author": "montai",
   "dependencies": {
    
-  }
+  },
+  "files": [
+    "dist"                                       
+  ]
 }
