--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -2,19 +2,19 @@
   "name": "@montai/bus",
   "version": "1.0.0",
   "description": "bus com",
-  "main": "index.js",
+  "author": "montai",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "busui"
   ],
-  "author": "montai",
-  "dependencies": {
-  
-  },
   "files": [
-    "dist/*.*.js",
-    "dist/*.js"                               
-  ]
+    "dist"
+  ],
+  "devDependencies": {
+
+  }
 }
