--- a/packages/com/package.json
+++ b/packages/com/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@montai/com",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "react base com",
-  "main": "index.js",
+  "author": "montai",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "comui"
   ],
-  "author": "montai",
-  "dependencies": {
-   
-  },
   "files": [
-    "dist/*.*.js",
-    "dist/*.js"                                 
-  ]
+    "dist"
+  ],
+  "devDependencies": {
+
+  }
 }
