--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "root",
+  "name": "com_platform",
   "private": true,
+  "author": "montai",
   "workspaces": [
     "packages/*"
   ],
