--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "com_platform",
   "private": true,
   "author": "montai",
+  "license": "Apache-2.0",
   "workspaces": [
     "packages/*"
   ],
